--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@
   src: url(./assets/fonts/MPLUS1p-Black.ttf);
 }
 @font-face {
-  font-family: "Montserrat Semi Bold";
-  src: url(./assets/fonts/Montserrat-SemiBold.ttf);
+  font-family: "BebasNeue Regular";
+  src: url(./assets/fonts/BebasNeue-Regular.ttf);
 }
 @font-face {
-  font-family: "Montserrat Bold";
-  src: url(./assets/fonts/Montserrat-Bold.ttf);
+  font-family: "MPLUS1p Regular";
+  src: url(./assets/fonts/MPLUS1p-Regular.ttf);
 }
 body {
   position: relative;
@@ -41,9 +41,28 @@ body {
   justify-content: center;
   align-items: center;
   scroll-snap-align: center;
+  position: relative;
 }
 .home article img {
   width: 550px;
+  filter: drop-shadow(14px 14px 48px rgba(0, 0, 0, 0.2));
+}
+.home article p {
+  position: absolute;
+  right: 48px;
+  top: 72px;
+  writing-mode: vertical-rl;
+  display: inline-flex;
+  column-gap: 48px;
+  font-size: 72px;
+  font-family: "BebasNeue Regular";
+  text-transform: capitalize;
+}
+.home article p span {
+  writing-mode: vertical-rl;
+  font-family: "MPLUS1p Regular";
+  font-size: 36px;
+  filter: hue-rotate(45deg);
 }
 
 h1 {
@@ -60,6 +79,18 @@ h1 span {
   margin-top: 72px;
   font-size: 36px;
   border-left: 2px solid;
+}
+
+h2 {
+  position: absolute;
+  bottom: 48px;
+  right: 72px;
+  font-size: 18px;
+  font-family: "BebasNeue Regular";
+}
+h2 a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=App.css.map */
