--- a/src/App.scss
+++ b/src/App.scss
@@ -23,9 +23,40 @@ body {
     justify-content: center;
     align-items: center;
     scroll-snap-align: center;
+    position: relative;
 
     img {
       width: 550px;
+      filter: drop-shadow($s $s $h  rgba(black,0.2));
+    }
+
+    p {
+      position: absolute;
+      right: $h;
+      top: $xh;
+      writing-mode: vertical-rl;
+      display: inline-flex;
+      column-gap: $h;
+      font: {
+        size: $xh;
+        family: "BebasNeue Regular";
+      }
+      text: {
+        transform: capitalize;
+      }
+
+      &:after {
+        // content: "*";
+      }
+      span {
+        writing-mode: vertical-rl;
+        font: {
+          family: "MPLUS1p Regular";
+          size: $xxl;
+        }
+        filter: hue-rotate(45deg);
+
+      }
     }
   }
 }
@@ -48,6 +79,20 @@ h1 {
     font: {
       size: $xxl;
     }
-    border-left: 2px solid ;
+    border-left: 2px solid;
   }
+}
+
+h2{
+    position: absolute;
+    bottom: $h;
+    right:$xh;
+    font: {
+        size: $l;
+        family: "BebasNeue Regular";
+      }
+      a{
+        color: inherit;
+        text-decoration: none;
+      }
 }
