--- a/src/UISystem.scss
+++ b/src/UISystem.scss
@@ -4,12 +4,12 @@
     src: url(./assets/fonts/MPLUS1p-Black.ttf);
   }
   @font-face {
-    font-family: "Montserrat Semi Bold";
-    src: url(./assets/fonts/Montserrat-SemiBold.ttf);
+    font-family: "BebasNeue Regular";
+    src: url(./assets/fonts/BebasNeue-Regular.ttf);
   }
   @font-face {
-    font-family: "Montserrat Bold";
-    src: url(./assets/fonts/Montserrat-Bold.ttf);
+    font-family: "MPLUS1p Regular";
+    src: url(./assets/fonts/MPLUS1p-Regular.ttf);
   }
   
   // Sizes
