--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
 }
 .home article img {
   width: 550px;
-  filter: drop-shadow(14px 14px 48px rgba(0, 0, 0, 0.2));
+  animation: float 3s infinite alternate;
 }
 .home article p {
   position: absolute;
@@ -95,6 +95,16 @@ h2 a {
   text-decoration: none;
 }
 
+@keyframes float {
+  0% {
+    filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3));
+    transform: translatey(0);
+  }
+  100% {
+    filter: drop-shadow(0 25px 15px rgba(0, 0, 0, 0.2));
+    transform: translatey(-20px);
+  }
+}
 @media only screen and (min-device-width: 220px) and (max-device-width: 767px) {
   .home article p {
     top: 16px;
